# bsd-xdr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/: xdr_private.h
rpc/: types.h
src/test/: xdrstdio_test.c
